--- a/ansible/prometheus/tasks/main.yml
+++ b/ansible/prometheus/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: Download Prometheus
   ansible.builtin.get_url:
-    url: wget https://github.com/prometheus/prometheus/releases/download/v2.45.0/prometheus-2.45.0.linux-amd64.tar.gz
+    url: https://github.com/prometheus/prometheus/releases/download/v2.45.0/prometheus-2.45.0.linux-amd64.tar.gz
     dest: /tmp/prometheus.tar.gz
 
 
@@ -16,3 +16,15 @@
     src: /tmp/prometheus.tar.gz
     dest: /tmp
     remote_src: yes
+
+
+- name: Change file ownership, group and permissions
+  ansible.builtin.file:
+    path: "{{ item }}"
+    owner: prometheus
+    group: prometheus
+    mode: '0755'
+    state: directory
+  loop:
+   - /data
+   - /etc/prometheus
