--- a/ansible/prometheus/tasks/main.yml
+++ b/ansible/prometheus/tasks/main.yml
@@ -28,3 +28,40 @@
   loop:
    - /data
    - /etc/prometheus
+
+- name: Copy binaries
+  ansible.builtin.copy:
+    src: /tmp/prometheus-2.45.0.linux-amd64/{{ item }}
+    dest: /usr/local/bin
+    remote_src: yes
+    mode: '0755'
+  loop:
+    - prometheus
+    - promtool
+
+- name: Copy files
+  ansible.builtin.copy:
+    src: /tmp/prometheus-2.45.0.linux-amd64/{{ item }}
+    dest: /etc/prometheus
+    remote_src: yes
+    mode: '0755'
+  loop:
+    - consoles
+    - console_libraries
+    - prometheus.yml
+
+- name: Template a file to /etc/systemd/system
+  ansible.builtin.template:
+    src: templates/prometheus.service.j2
+    dest: /etc/systemd/system/prometheus.service
+
+
+- name: Make sure a service unit is running
+  ansible.builtin.systemd:
+    state: started
+    name: prometheus
+    enabled: yes
+  retries: 3
+  delay: 10
+  register: result  
+  until: result is succeeded
